add available credit limit feature and fix openapi
