# docs/openapi.yaml
@@ -11,18 +11,19 @@ paths:
       tags:
         - accounts
       description: Create a new account
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Account"
       responses:
-        200:
+        201:
           description: Account created with success
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  types:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/Account"
+                $ref: "#/components/schemas/Account"
         500:
           description: Internal server error
   /accounts/{accountId}:
@@ -36,7 +37,7 @@ paths:
           description: The account identifier
           required: true
           schema:
-            type: string
+            type: number
       responses:
         200:
           description: Account got with success
@@ -44,10 +45,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Account"
-        400:
-          description: Bad request
-        404:
-          description: Account not found
         500:
           description: Internal server error
   /transactions:
@@ -61,10 +58,25 @@ paths:
             schema:
               $ref: "#/components/schemas/Transaction"
       responses:
-        200:
+        201:
           description: Transaction created with successful
         400:
           description: Bad request
+        500:
+          description: Internal server error
+    get:
+      tags:
+        - transactions
+      description: Get all transactions
+      responses:
+        200:
+          description: Account got with success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Transaction"
         500:
           description: Internal server error
 components:
@@ -72,18 +84,15 @@ components:
     Account:
       type: object
       properties:
-        type:
+        id:
+          type: number
+          example: 1
+        document_number:
           type: string
-          example: model
-        provider:
-          type: string
-          example: analytics
-        name:
-          type: string
-          example: empresa-bita-score
-        description:
-          type: string
-          example: "Modelo de Analytics para calcular o score do Bita"
+          example: "12345678900"
+        available_credit_limit:
+          type: number
+          example: 1000.00
     Transaction:
       type: object
       properties:
