# internal/domain/entity/account/entity.go
@@ -2,6 +2,7 @@ package account
 
 // Account represets an user account
 type Account struct {
-	ID             int
-	DocumentNumber string
+	ID                   int
+	DocumentNumber       string
+	AvailableCreditLimit float64
 }
