# internal/domain/entity/account/fixtures.go
@@ -2,7 +2,8 @@ package account
 
 func NewFixtureAccount() *Account {
 	return &Account{
-		ID:             1,
-		DocumentNumber: "12345678900",
+		ID:                   1,
+		DocumentNumber:       "12345678900",
+		AvailableCreditLimit: 1000,
 	}
 }
